// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupExtraDetails details when mentioned 1`] = `
<EventOrGroupExtraDetails
  annotations={
    Array [
      "annotation1",
      "annotation2",
    ]
  }
  firstSeen="2017-07-01T02:06:02Z"
  groupId="groupId"
  lastSeen="2017-07-25T22:56:12Z"
  logger="javascript logger"
  numComments={14}
  orgId="orgId"
  projectId="projectId"
  shortId="shortId"
  subscriptionDetails={
    Object {
      "reason": "mentioned",
    }
  }
/>
`;

exports[`EventOrGroupExtraDetails renders all details 1`] = `
<EventOrGroupExtraDetails
  annotations={
    Array [
      "annotation1",
      "annotation2",
    ]
  }
  assignedTo={
    Object {
      "name": "Assignee Name",
    }
  }
  firstSeen="2017-07-01T02:06:02Z"
  groupId="groupId"
  lastSeen="2017-07-25T22:56:12Z"
  logger="javascript logger"
  numComments={14}
  orgId="orgId"
  projectId="projectId"
  shortId="shortId"
  status="resolved"
/>
`;

exports[`EventOrGroupExtraDetails renders assignee and status 1`] = `
<EventOrGroupExtraDetails
  annotations={
    Array [
      "annotation1",
      "annotation2",
    ]
  }
  assignedTo={
    Object {
      "name": "Assignee Name",
    }
  }
  firstSeen="2017-07-01T02:06:02Z"
  groupId="groupId"
  lastSeen="2017-07-25T22:56:12Z"
  logger="javascript logger"
  numComments={14}
  orgId="orgId"
  projectId="projectId"
  shortId="shortId"
  showAssignee={true}
  showStatus={true}
  status="resolved"
/>
`;

exports[`EventOrGroupExtraDetails renders last and first seen 1`] = `
<EventOrGroupExtraDetails
  firstSeen="2017-07-01T02:06:02Z"
  groupId="groupId"
  lastSeen="2017-07-25T22:56:12Z"
  orgId="orgId"
  projectId="projectId"
/>
`;

exports[`EventOrGroupExtraDetails renders only first seen 1`] = `
<EventOrGroupExtraDetails
  firstSeen="2017-07-01T02:06:02Z"
  groupId="groupId"
  orgId="orgId"
  projectId="projectId"
/>
`;

exports[`EventOrGroupExtraDetails renders only last seen 1`] = `
<EventOrGroupExtraDetails
  groupId="groupId"
  lastSeen="2017-07-25T22:56:12Z"
  orgId="orgId"
  projectId="projectId"
/>
`;
